--- a/src/PlexLibraryMonitor/PlexLibraryMonitor.csproj
+++ b/src/PlexLibraryMonitor/PlexLibraryMonitor.csproj
@@ -6,7 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hangfire.Core" Version="1.7.28" />
+    <PackageReference Include="Hangfire.FluentNHibernateStorage" Version="1.2.1020" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
+    <PackageReference Include="MySql.Data" Version="8.0.27" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="6.2.16" />
   </ItemGroup>
 
 </Project>
