Started adding simple json-file persistence

--- a/src/PlexLibraryMonitor/appsettings.json
+++ b/src/PlexLibraryMonitor/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "plibmonSettings": {
+    "ClientId": "e6d24101-d3f0-4bfc-88aa-0cbd71f1a137",
+    "ClientName": "plibmon",
+    "CacheFolder": "cacehe",
+    "CacheFile": "cache.json"
+  }
 }
