Moved everything that isn't related to the website itself to Plibmon.Domain class library

--- a/src/PlexLibraryMonitor/PlexLibraryMonitor.csproj
+++ b/src/PlexLibraryMonitor/PlexLibraryMonitor.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Refit.HttpClientFactory" Version="6.2.16" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Plibmon.Domain\Plibmon.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
