--- a/src/PlexLibraryMonitor/appsettings.json
+++ b/src/PlexLibraryMonitor/appsettings.json
@@ -10,7 +10,7 @@
   "plibmonSettings": {
     "ClientId": "e6d24101-d3f0-4bfc-88aa-0cbd71f1a137",
     "ClientName": "plibmon",
-    "CacheFolder": "cacehe",
+    "CacheFolder": "cache",
     "CacheFile": "cache.json"
   }
 }
