--- a/src/PlexLibraryMonitor/PlexLibraryMonitor.csproj
+++ b/src/PlexLibraryMonitor/PlexLibraryMonitor.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Hangfire.Core" Version="1.7.28" />
     <PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.1" />
     <PackageReference Include="MySql.Data" Version="8.0.27" />
     <PackageReference Include="Refit.HttpClientFactory" Version="6.2.16" />
   </ItemGroup>
