--- a/src/Plibmon.BlazorWasm/Plibmon.BlazorWasm.csproj
+++ b/src/Plibmon.BlazorWasm/Plibmon.BlazorWasm.csproj
@@ -9,6 +9,12 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.1" PrivateAssets="all" />
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.1" />
+        <PackageReference Include="Refit" Version="6.2.16" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Plibmon.Domain\Plibmon.Domain.csproj" />
     </ItemGroup>
 
 </Project>
