--- a/src/Plibmon/Server/Plibmon.Server.csproj
+++ b/src/Plibmon/Server/Plibmon.Server.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Plibmon.Domain\Plibmon.Domain.csproj" />
     <ProjectReference Include="..\Client\Plibmon.Client.csproj" />
     <ProjectReference Include="..\Shared\Plibmon.Shared.csproj" />
   </ItemGroup>
