--- a/src/Plibmon.Domain/Plibmon.Domain.csproj
+++ b/src/Plibmon.Domain/Plibmon.Domain.csproj
@@ -15,4 +15,8 @@
       <PackageReference Include="Refit.HttpClientFactory" Version="6.2.16" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Plibmon\Shared\Plibmon.Shared.csproj" />
+    </ItemGroup>
+
 </Project>
