Fixed config data coming from appsettings.json

--- a/src/Plibmon/Server/appsettings.json
+++ b/src/Plibmon/Server/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Plibmon": {
+    "CacheFile": "data.json",
+    "CacheFolder": "data",
+    "ClientName": "plibmon",
+    "ClientId": "e6d24101-d3f0-4bfc-88aa-0cbd71f1a137",
+    "PlexApiBaseAddress": "https://plex.tv/api/v2"
+  }
 }
