--- a/.gitignore
+++ b/.gitignore
@@ -432,3 +432,7 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 # End of https://www.toptal.com/developers/gitignore/api/rider
+#
+
+## Custom below this
+**/data
