--- a/src/Plibmon/Domain/Plibmon.Domain.csproj
+++ b/src/Plibmon/Domain/Plibmon.Domain.csproj
@@ -18,7 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Plibmon\Shared\Plibmon.Shared.csproj" />
+      <ProjectReference Include="..\Shared\Plibmon.Shared.csproj" />
     </ItemGroup>
 
 </Project>
