--- a/src/Plibmon/Server/Plibmon.Server.csproj
+++ b/src/Plibmon/Server/Plibmon.Server.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Plibmon.Domain\Plibmon.Domain.csproj" />
+    <ProjectReference Include="..\Domain\Plibmon.Domain.csproj" />
     <ProjectReference Include="..\Client\Plibmon.Client.csproj" />
     <ProjectReference Include="..\Shared\Plibmon.Shared.csproj" />
   </ItemGroup>
